# my_sklearn_codes

./: pyproject.toml  requirements.txt
Hands-on-ML-master/第12章 决策树/: 12 决策树.ipynb  lenses_tree.pkl  my_tree.py  sk_tree.py
Hands-on-ML-master/第3章 k近邻算法/: 03 k近邻算法.ipynb  my_detect.py  my_knn.py
Hands-on-ML-master/第4章 线性回归/: 04 线性回归.ipynb  my_test.py  my_test2.py
Hands-on-ML-master/第6章 逻辑斯谛回归/: 06 逻辑斯谛回归.ipynb  my_test1.py
Hands-on-ML-master/第7章 双线性模型/: 07 双线性模型.ipynb  my_fm.py  my_mf.py
work/dataSet/: t1.py  test.puml
