[project]
name = "sklearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
]
